--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,20 @@ section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
+
+.hover-box {
+  position: relative;
+  overflow: hidden;
+  text-decoration: none
+  color: #fff;
+}
+
+.hover-box h2 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 1rem;
+  margin: 0;
+  text-align: center;
+  background-image: linear-gratient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+}
