--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,19 @@ section {
 }
 
 .hover-box img {
+  display: block;
   filter: grayscale(100%);
   width: 100%;
+  transition: all .2s linear;
+}
+
+.hover-box:hover h2,
+.hover-box:focus h2 {
+  bottom: 0;
+}
+
+.hover-box:hover img,
+.hover-box:focus img {
+  filter: grayscale(0);
+  transform: scale(1.1);
 }
