--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ section {
 .hover-box {
   position: relative;
   overflow: hidden;
-  text-decoration: none
+  text-decoration: none;
   color: #fff;
 }
 
@@ -28,7 +28,7 @@ section {
   padding: 1rem;
   margin: 0;
   text-align: center;
-  background-image: linear-gratient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
   text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
 }
 
