--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ section {
   padding: 1rem;
   margin: 0;
   text-align: center;
+  transition: all .2s linear;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
   text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
 }
